forum: fixup forum vote layout issue.
Fix problem with forum votes being laid out in a vertical list instead
of a horizontal list. Broken in 5780ed57.

--- a/app/components/forum_post_component/forum_post_component.scss
+++ b/app/components/forum_post_component/forum_post_component.scss
@@ -24,10 +24,8 @@ article.forum-post {
       display: none;
     }
 
-    menu {
-      ul.votes {
-        margin: 0.5em 0;
-      }
+    menu.votes {
+      margin: 0.5em 0;
     }
   }
 
